# opencvLearn

./: CMakeLists.txt  main.cpp
